unpackaged/main/default/objects/Forecast_Call__c/Forecast_Call__c.object-meta.xml
<CustomObject>
    <label>Forecast Call</label>
    <nameField>
        <label>Forecast Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>