unpackaged/main/default/objects/Forecast_Call__c/fields/Best_Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Best_Case_Notes__c</fullName>
    <label>Best Case Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>