unpackaged/main/default/objects/Forecast_Call__c/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <label>Call Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>