unpackaged/main/default/objects/Forecast_Call__c/fields/Call_Segment__c.field-meta.xml
<CustomField>
    <fullName>Call_Segment__c</fullName>
    <description>Team segment + geo.</description>
    <label>Call Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRW</fullName>
            </value>
            <value>
                <fullName>MMK (SF)</fullName>
            </value>
            <value>
                <fullName>MMK (NYC)</fullName>
            </value>
            <value>
                <fullName>ENT (SF)</fullName>
            </value>
            <value>
                <fullName>ENT (NYC)</fullName>
            </value>
            <value>
                <fullName>ENT (Remote)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>