unpackaged/main/default/objects/Forecast_Call__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>Forecast Call Type for the current forecast period (i.e. NUE or Churn/Contraction).</description>
    <inlineHelpText>Forecast Call Type for the current forecast period (i.e. NUE or Churn/Contraction).</inlineHelpText>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forecast_Call_Types</valueSetName>
    </valueSet>
</CustomField>