unpackaged/main/default/objects/Forecast_Call__c/fields/Call_Week__c.field-meta.xml
<CustomField>
    <fullName>Call_Week__c</fullName>
    <formula>CASE(MOD(Call_Date__c - DATE(1900, 1, 6), 7),
0, Call_Date__c + 0,
1, Call_Date__c + 6,
2, Call_Date__c + 5,
3, Call_Date__c + 4,
4, Call_Date__c + 3,
5, Call_Date__c + 2,
6, Call_Date__c + 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Week</label>
    <type>Date</type>
</CustomField>