unpackaged/main/default/objects/Forecast_Call__c/fields/Churn_Contraction_Likely__c.field-meta.xml
<CustomField>
    <fullName>Churn_Contraction_Likely__c</fullName>
    <description>Rollup of Churn/Contraction Likely quarterly forecast. Quarterly forecast updated weekly.

Primarily used in Sales Manager Shotcaller Retool App.</description>
    <inlineHelpText>Rollup of Churn/Contraction Likely quarterly forecast. Quarterly forecast updated weekly.

Primarily used in Sales Manager Shotcaller Retool App.</inlineHelpText>
    <label>Churn/Contraction (Likely)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>