unpackaged/main/default/objects/Forecast_Call__c/fields/Churn_Contraction_Likely_Change__c.field-meta.xml
<CustomField>
    <fullName>Churn_Contraction_Likely_Change__c</fullName>
    <formula>Churn_Contraction_Likely__c -  Previous_Forecast_Call__r.Churn_Contraction_Likely__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Churn/Contraction (Likely) Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>