unpackaged/main/default/objects/Forecast_Call__c/fields/Churn_Contraction_Worst_Case__c.field-meta.xml
<CustomField>
    <fullName>Churn_Contraction_Worst_Case__c</fullName>
    <description>Rollup of Churn/Contraction Worst Case quarterly forecast. Quarterly forecast updated weekly.

Primarily used in Sales Manager Shotcaller Retool App.</description>
    <inlineHelpText>Rollup of Churn/Contraction Worst Case quarterly forecast. Quarterly forecast updated weekly.

Primarily used in Sales Manager Shotcaller Retool App.</inlineHelpText>
    <label>Churn/Contraction (Worst Case)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>