unpackaged/main/default/objects/Forecast_Call__c/fields/HoS_Best_Case_Override__c.field-meta.xml
<CustomField>
    <fullName>HoS_Best_Case_Override__c</fullName>
    <description>Head of Sales field used to override Manager Forecast Best Case.</description>
    <inlineHelpText>Head of Sales field used to override Manager Forecast Best Case.</inlineHelpText>
    <label>HoS: Best Case Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>