unpackaged/main/default/objects/Forecast_Call__c/fields/HoS_Call_Override__c.field-meta.xml
<CustomField>
    <fullName>HoS_Call_Override__c</fullName>
    <description>Head of Sales field used to override Manager Forecast Calls.</description>
    <inlineHelpText>Head of Sales field used to override Manager Forecast Calls.</inlineHelpText>
    <label>HoS: Call Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>