unpackaged/main/default/objects/Forecast_Call__c/fields/HoS_Call_Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>HoS_Call_Override_Notes__c</fullName>
    <description>Head of Sales field to provide notes related to their Call Override adjustments.</description>
    <inlineHelpText>Head of Sales field to provide notes related to their Call Override adjustments.</inlineHelpText>
    <label>HoS: Call Override Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>