unpackaged/main/default/objects/Forecast_Call__c/fields/Manager_Notes_Best_Case__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes_Best_Case__c</fullName>
    <description>Records manager notes related to best case submissions</description>
    <label>Manager Notes: Best Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>