unpackaged/main/default/objects/Forecast_Call__c/fields/Manager_Notes_Call__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes_Call__c</fullName>
    <description>Records manager notes related to call submissions</description>
    <label>Manager Notes: Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>