unpackaged/main/default/objects/Forecast_Call__c/fields/Manager_Notes_Worst_Case__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes_Worst_Case__c</fullName>
    <description>Records manager notes related to worst case submissions. Churn/Contraction forecasts only.

Primarily used in Sales Manager Shotcaller Retool App.</description>
    <inlineHelpText>Records manager notes related to worst case submissions. Churn/Contraction forecasts only.

Primarily used in Sales Manager Shotcaller Retool App.</inlineHelpText>
    <label>Manager Notes: Worst Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>