unpackaged/main/default/objects/Forecast_Call__c/fields/New_Annualized_Revenue_Call__c.field-meta.xml
<CustomField>
    <fullName>New_Annualized_Revenue_Call__c</fullName>
    <description>New Annualized Revenue Call amount for the given snapshot week.</description>
    <inlineHelpText>New Annualized Revenue Call amount for the given snapshot week.</inlineHelpText>
    <label>New Annualized Revenue (Call)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>