unpackaged/main/default/objects/Forecast_Call__c/fields/New_AR_Call_Change__c.field-meta.xml
<CustomField>
    <fullName>New_AR_Call_Change__c</fullName>
    <formula>New_Annualized_Revenue_Call__c - Previous_Forecast_Call__r.New_Annualized_Revenue_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New AR (Call) Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>