unpackaged/main/default/objects/Forecast_Call__c/fields/Plug_Best_Case__c.field-meta.xml
<CustomField>
    <fullName>Plug_Best_Case__c</fullName>
    <description>Additional new annualized revenue that is not represented by active pipeline</description>
    <label>Plug: Best Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>