unpackaged/main/default/objects/Forecast_Call__c/fields/Plug_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Plug_Write_Off__c</fullName>
    <description>Used to record &#39;Write-Offs&#39; that contribute to gaps in revenue not represented by pipeline.</description>
    <inlineHelpText>Used to record &#39;Write-Offs&#39; that contribute to gaps in revenue not represented by pipeline.</inlineHelpText>
    <label>Plug: Write-Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>