unpackaged/main/default/objects/Forecast_Call__c/fields/Previous_Forecast_Call__c.field-meta.xml
<CustomField>
    <fullName>Previous_Forecast_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Forecast Call</label>
    <referenceTo>Forecast_Call__c</referenceTo>
    <relationshipLabel>Previous Forecast Calls</relationshipLabel>
    <relationshipName>Forecast_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>