unpackaged/main/default/objects/Forecast_Call__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager of the opportunity owner</description>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>