unpackaged/main/default/objects/Forecast_Call__c/fields/SQOs_Best_Case__c.field-meta.xml
<CustomField>
    <fullName>SQOs_Best_Case__c</fullName>
    <label>SQOs (Best Case)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>