unpackaged/main/default/objects/Forecast_Call__c/fields/Subregion__c.field-meta.xml
<CustomField>
    <fullName>Subregion__c</fullName>
    <label>Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>