unpackaged/main/default/objects/Forecast_Call__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates whether the forecast call is for the current month or quarter</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>