unpackaged/main/default/objects/Forecast_Call__c/validationRules/Call_Date_Monday.validationRule-meta.xml
<ValidationRule>
    <fullName>Call_Date_Monday</fullName>
    <active>false</active>
    <errorConditionFormula>WEEKDAY(Call_Date__c)&lt;&gt;2 &amp;&amp; ISPICKVAL(Owner:User.Level__c, &#39;IC&#39;)</errorConditionFormula>
    <errorDisplayField>Call_Date__c</errorDisplayField>
    <errorMessage>Call date must be a Monday</errorMessage>
</ValidationRule>