unpackaged/main/default/objects/Forecast_Call__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_Date__c</columns>
    <columns>Call_Month__c</columns>
    <columns>Call_Quarter__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Department__c</columns>
    <columns>New_Annualized_Revenue_Call__c</columns>
    <columns>New_Annualized_Revenue_Best_Case__c</columns>
    <columns>Type__c</columns>
    <columns>Notes__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>